<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/developed_by_sana_ali_siddique"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Move" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="407dp"
        android:layout_height="158dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/temperature_converter"
        android:textAlignment="center"
        android:textColor="#F9F9E0"
        android:textColorHighlight="#7F5539"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/Move"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="236dp"
        android:backgroundTint="#ddb892"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/enter"
        android:textColor="#774936"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        app:strokeColor="#7f5539"
        app:strokeWidth="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>