<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f5539"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="115dp"
        android:background="#9c6644"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/C"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/_00"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ddb892" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/degcelsius"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddb892" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/F"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/_00"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ddb892" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/degfahrenheit"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddb892" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/K"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/_00"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ddb892" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/kelvin"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_above="@+id/values"
        android:layout_marginBottom="81dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <EditText
                android:id="@+id/input"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:autofillHints="Enter any number"
                android:background="#ede0d4"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ede0d4"
                android:padding="15dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="60dp"
        android:background="#9C6644"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="@string/conversion"
        android:textColor="#E6CCB2"
        android:textSize="48sp" />

</RelativeLayout>